src/objects/Community_Profile_Tag__c.object
<CustomObject>
    <description>This object allows contacts to select Tags to define their interests in the Community.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>determines if profile tag is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Tag__c</fullName>
        <description>Defines the tags that will be associated to the Contact record.</description>
        <label>Community Tag</label>
        <referenceTo>Community_Tag__c</referenceTo>
        <relationshipLabel>Users Tagged</relationshipLabel>
        <relationshipName>Community_Users_Tagged</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows tags to be associated to this Contact record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Profile Tags</relationshipLabel>
        <relationshipName>Contact_Profile_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Tag_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Profile Tag SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Represents the Name of the Theme that the Tag is related to.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Community_Theme__r.Id , Community_Tag__r.Community_Theme__r.Name, &quot;_Self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Name of the Theme that the Tag is related to.</inlineHelpText>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <label>Community Profile Tag</label>
    <nameField>
        <displayFormat>CCT-{yy}{mm}{0}</displayFormat>
        <label>Community Profile Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profile Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>